# Brain-Cancer-Medical-Imaging-Classification

./: Makefile  README.md  pyproject.toml
cv:_medical_imaging_classification/: __init__.py  dataset.py  features.py  plots.py
cv:_medical_imaging_classification/modeling/: predict.py  train.py
notebooks/: 01-RC-Convolution_neural_network_project.html
