[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cv:_medical_imaging_classification"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Roydan Cruz" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["cv:_medical_imaging_classification"]
include = ["pyproject.toml", "cv:_medical_imaging_classification/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["cv:_medical_imaging_classification"]
force-sort-within-sections = true

